update seed to pnpm task
